# video-compress

./: .gitignore  README.md  pyproject.toml
docs/: design.md
src/action_video_compress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/compress/: __init__.py  cli.py  encoder.py  probe.py  profiles.py  progress.py  queue.py  report.py
